# otus_homework_5

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  matrix-0.0.1-Linux.deb  matrix_cli  test_Version
.github/workflows/: release.yml
@CMAKE_CURRENT_BINARY_DIR@/docs/: graph_legend.html  index.html
Testing/Temporary/: CTestCostData.txt
_CPack_Packages/Linux/DEB/matrix-0.0.1-Linux/: control  md5sums
docs/: Matrix_8h.html  Matrix_8h__dep__incl.map  Matrix_8h__dep__incl.md5  Matrix_8h__incl.map  Matrix_8h__incl.md5  Matrix_8h_source.html  annotated.html  classMatrix-members.html  classMatrix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f208d550dbffb9fb7a9061b68ff675d7.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  test__Version_8cpp.html  versionLib_8cpp.html  versionLib_8h.html  versionLib_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
src/: Matrix.h  main.cpp
